[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "jupyter ~= 1.0",
    "numpy ~= 1.0",
    "matplotlib ~= 3.0",
    "tqdm ~= 4.0",
    "json5 ~= 0.9",
]
name = "qubecalib"
dynamic = ["version"]
requires-python = ">=3.9"
authors = [{ name = "h403", email = "shiomi@ieee.org" }]
description = "QuBE calibration tools"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GPL",
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
packages = ["qubecalib"]

[tool.setuptools.dynamic]
version = { attr = "qubecalib.__version__" }

[tool.pytest.ini_options]
# cf. https://docs.pytest.org/en/6.2.x/pythonpath.html#import-modes
addopts = "--import-mode=importlib"
