[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = 3.8

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true
