[build-system]
requires = ["setuptools>=44.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = 3.9

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true
