[metadata]
name = qubecalib
version = attr:qubecalib.__version__
description = QuBE calibration tools
author = h403
author_email = shiomi@ieee.org
long_description = QuBE calibration tools
classifiers =
    License :: OSI Approved :: GPL
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages =
    qubecalib

install_requires =
    numpy ~= 1.24.0
    pyyaml

[options.package_data]
qubecalib =
    py.typed

[options.extras_require]
dev =
    setuptools
    wheel
    black
    isort
    mypy
    pyproject-flake8
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
